# LYNCS-rover

./: .gitignore  .travis.yml  README.md
main/: FrequencyCounter.cpp  PIDController.cpp  PinDefinitions.h  RoverMotor.cpp  main.ino  rover1.ino
main/local_libs/: FrequencyCounter.h  LowPass.h  Matrix.h  MedianFilter.h  PIDController.h  RoverMotor.h  SPIProtocol.h
raspberry_pi/Base/: ._BM280.py  ._DS4-2.py  ._DS4-3.py  ._DS4-6.py  ._DS4-7.py  ._DS4-8.py  ._DS4-9.py  ._MS5607.py  ._Makefile  ._Raspi-servo.py  ._bme280.c  ._bme280.h  ._challenge.cpp  BM280.py  CHALLENGE  CSEARCH  CalculateCsearch.cpp  CalculateCsearch.h  Csearch.cpp  Csearch.h  DS4-2.py  DS4-3.py  DS4-5.py  DS4-6.py  DS4-7.py  DS4-8.py  DS4-9.py  MS5607.py  Makefile  Raspi-servo.py  bme280  bme280.c  bme280.cpp  bme280.h  challenge.cpp  compile.sh
raspberry_pi/Camera/: ._Sample1.py  CSEARCH  CSTUDY1  CSTUDY2  Csearch.cpp  Cstudy1.cpp  Cstudy2.cpp  Sample1.py
raspberry_pi/pre/: ._Makefile  ._bme280.c  ._bme280.h  bme280  bme280.c  bme280.h
raspberry_pi/rover/: CMakeLists.txt
raspberry_pi/rover/include/: ArduinoControl.h  CalculateCsearch.h  Csearch.h  TransferValuesToArduino.h
raspberry_pi/rover/py_src/: RoverGPS.py  assemble.py  get_gps_list.py  hightest.py  main.py  test.py
raspberry_pi/rover/py_src/rover_module/: __init__.py
raspberry_pi/rover/py_src/rover_module/height/: core.py
raspberry_pi/rover/py_src/tests/: test_gps.py
raspberry_pi/rover/src/: ArduinoControl.cpp  CMakeLists.txt  CalculateCsearch.cpp  Csearch.cpp  ForTest.cpp  TransferValuesToArduino.cpp  rover_lib.cpp
(+1 files in other folders)
